# allennlp-server

./: .flake8  .gitignore  Dockerfile  MANIFEST.in  README.md  configure.py  dev-requirements.txt  requirements.txt  server_simple.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml
allennlp_server/: __init__.py  version.py
allennlp_server/commands/: __init__.py  configure.py  server_simple.py
allennlp_server/config_explorer/: __init__.py  config_explorer.py  configuration.py
allennlp_server/tests/: configuration_test.py  plugin_test.py
allennlp_server/tests/commands/: configure_test.py  docstring_help_test.py  server_simple_test.py
allennlp_server/tests/config_explorer/: config_explorer_test.py  configuration_test.py
allennlp_server/tests/fixtures/bidaf/: best.th
config_explorer/: __init__.py  config_explorer.py  configuration.py
scripts/: get_version.py
tests/: config_explorer_test.py  configuration_test.py  server_simple_test.py
tests/commands/: server_simple_test.py
