[metadata]
name = allennlp-server
version = 1.0.0-unreleased
description = Simple demo server for AllenNLP models and training config builder.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenai/allennlp-server
keywords = allennlp simple demo server serve models configuration file NLP deep learning machine reading
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Flake8
  Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Visualization
author = Allen Institute for Artificial Intelligence
author_email = allennlp@allenai.org
license = Apache 2.0
license_file = LICENSE

[options]
packages = find_namespace:
include_package_data = True
install_requires =
  allennlp @ git+https://github.com/allenai/allennlp
  allennlp_models @ git+https://github.com/allenai/allennlp-models

  # Accessing files from S3 directly.
  boto3

  # REST interface for the models.
  flask>=1.0.2
  flask-cors>=3.0.7
  gevent>=1.3.6
python_requires = >=3.6.1

[options.packages.find]
include =
  allennlp_plugins.*
  allennlp_server
exclude =
  *.tests
  *.tests.*
  tests.*
  tests
